[gd_scene load_steps=6 format=3 uid="uid://bl77xfe15mm2c"]

[ext_resource type="Script" path="res://scene/Objects/Dynamic/Cube_Exclamation.gd" id="1_q55sw"]
[ext_resource type="PackedScene" uid="uid://c73tqfv0jxq3a" path="res://assets/Ultimate Platformer Pack - Dec 2021/Cubes/glTF/Cube_Exclamation.gltf" id="2_xqhkq"]
[ext_resource type="PackedScene" uid="uid://cbwesehl4c23g" path="res://assets/Ultimate Platformer Pack - Dec 2021/Cubes/glTF/Cube_Question.gltf" id="3_oi70m"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tp3vf"]
size = Vector3(2.1, 2.1, 2.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_cw41w"]
size = Vector3(2, 2, 2)

[node name="Cube_Exclamation" type="RigidBody3D" groups=["logic_cube"]]
collision_layer = 4
collision_mask = 10
freeze = true
script = ExtResource("1_q55sw")

[node name="Cube_Exclamation" parent="." instance=ExtResource("2_xqhkq")]

[node name="Cube_Question" parent="." instance=ExtResource("3_oi70m")]
visible = false

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_tp3vf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_cw41w")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
